Accessibility: fixed bug 4921, Editing on: block delete, 'move down'... icons too big... CSS selector (OU-Bugz: 747)

--- a/theme/standard/styles_layout.css
+++ b/theme/standard/styles_layout.css
@@ -431,7 +431,7 @@ a.skip-block, .skip-block {
   font-size:1px;
 }
 
-.sideblock .icon img {
+.sideblock li .icon img {
   width:16px;
   height:16px;
 }
